better list from array